--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,278 +8,20 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 172.67.212.114
-    port: 8080
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 58ecb66f-8b55-4b2a-97c9-7b87e189d2f7
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /video/QXjZG5u4F2
       headers:
-        host: www.crispyrainbow.biz
+        host: us3AJ8biuQx.fzbqfrse.xyz
   - &id002
     name: 🇺🇸_US_美国_2
-    type: vmess
-    server: www.coldstone.club
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.coldstone.club
-  - &id003
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.21.83.10
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.coldstone.club
-  - &id004
-    name: 🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 108.181.2.154
-    port: 33445
-    cipher: auto
-    uuid: 7de8d7aa-ae4a-4d75-82f4-2e8b46fc0290
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.20.231.30
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id006
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 162.159.200.3
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.visaapp.top
-  - &id007
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 162.159.200.5
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.889611.com
-  - &id008
-    name: 🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 108.181.5.18
-    port: 18657
-    cipher: auto
-    uuid: 636ba072-493e-4235-b7a8-822bd4e340d5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇺🇸_US_美国->🇵🇳_PN_皮特凯恩_1
-    type: vmess
-    server: 173.249.197.176
-    port: 443
-    cipher: auto
-    uuid: e4c9dc48-f9dc-4d9b-9318-a3933d113736
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国->🇵🇳_PN_皮特凯恩_2
-    type: vmess
-    server: pitcairn.ednovas.org
-    port: 443
-    cipher: auto
-    uuid: e4c9dc48-f9dc-4d9b-9318-a3933d113736
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇨🇦_CA_加拿大_3
-    type: ss
-    server: 158.69.0.27
-    port: 1080
-    password: KVcdcsJT6f0OWL5sEyM38A
-    cipher: chacha20-ietf-poly1305
-  - &id012
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 35.87.209.22
-    port: 13489
-    cipher: auto
-    uuid: 61761e55-dff5-4f94-f75f-b0a4718bba98
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id013
-    name: 🇦🇷_AR_阿根廷->🇳🇱_NL_荷兰
-    type: vmess
-    server: 87.120.164.7
-    port: 80
-    cipher: auto
-    uuid: 75916879-adcf-45b3-98d8-54a2412470b5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@forwardv2ray
-      headers:
-        host: sahar55.serveirc.com
-  - &id014
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10845
-    udp: true
-    password: f0883703-3161-4d18-b243-4b2ca0647a05
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10846
-    udp: true
-    password: f0883703-3161-4d18-b243-4b2ca0647a05
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10848
-    udp: true
-    password: f0883703-3161-4d18-b243-4b2ca0647a05
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10838
-    udp: true
-    password: f0883703-3161-4d18-b243-4b2ca0647a05
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10850
-    udp: true
-    password: f0883703-3161-4d18-b243-4b2ca0647a05
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10837
-    udp: true
-    password: f0883703-3161-4d18-b243-4b2ca0647a05
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10847
-    udp: true
-    password: f0883703-3161-4d18-b243-4b2ca0647a05
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 77.246.106.242
-    port: 10220
-    password: B5JoPritUlCbuFoPzjpHuR
-    cipher: chacha20-ietf-poly1305
-  - &id022
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: cold-dawn-9246.fly.dev
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-  - &id023
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: server2.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 8420ee38-4cf6-4d79-a9ec-2731207cf83a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server2.beheshtbaneh.com
-  - &id024
-    name: 🇺🇸_US_美国_8
     type: vmess
     server: 104.21.82.183
     port: 8880
@@ -293,65 +35,34 @@ proxies:
       path: /
       headers:
         host: server6.beheshtbaneh.com
-  - &id025
-    name: 🇺🇸_US_美国_9
+  - &id003
+    name: 🇨🇦_CA_加拿大
     type: vmess
-    server: 104.18.15.151
-    port: 80
+    server: 108.181.5.18
+    port: 18657
     cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    uuid: 636ba072-493e-4235-b7a8-822bd4e340d5
     alterId: 0
     tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us3.889611.com
-  - &id026
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 162.159.200.6
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id027
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 104.18.15.147
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us3.889611.com
-  - &id028
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 18.157.63.148
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
-    alpn:
-      - http/1.1
-  - &id029
-    name: 🇺🇸_US_美国_11
+  - &id004
+    name: 🇪🇸_ES_西班牙->🇭🇰_HK_香港
+    type: vmess
+    server: 185.214.103.249
+    port: 8002
+    cipher: auto
+    uuid: e096b14e-b746-3dda-bc95-a435b4b2aceb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /db00
+      headers:
+        host: cache-hk-1.cn-db.top
+  - &id005
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: server12.beheshtbaneh.com
     port: 8880
@@ -365,23 +76,393 @@ proxies:
       path: /
       headers:
         host: server12.beheshtbaneh.com
-  - &id030
+  - &id006
+    name: 🇫🇷_FR_法国
+    type: ss
+    server: 51.158.204.157
+    port: 1165
+    password: 1NuiNBTUl7mwxFwtpDxL-g
+    cipher: chacha20-ietf-poly1305
+  - &id007
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 74.119.194.192
+    port: 41743
+    password: KBnPIuBNoue5acFpQ28LHg
+    cipher: chacha20-ietf-poly1305
+  - &id008
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: server2.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 8420ee38-4cf6-4d79-a9ec-2731207cf83a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server2.beheshtbaneh.com
+  - &id009
+    name: 🇬🇮_GI_直布罗陀
+    type: vmess
+    server: ee2-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: c1ebe8c7-bdd9-4aca-a2f7-01bea79279b3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ee2-vmess.sshmax.xyz
+  - &id010
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 104.22.51.162
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id011
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 104.21.94.99
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.blueberrywindow.online
+  - &id012
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 104.18.99.110
+    port: 2095
+    cipher: auto
+    uuid: bdede9d3-68c4-4bb1-8ad1-9a8eb07ff76f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/qYZue4zaWS
+      headers:
+        host: us82pRzxDMb.fzbqfrse.xyz
+  - &id013
+    name: 🇩🇪_DE_德国_1
+    type: trojan
+    server: 5.104.108.120
+    port: 443
+    udp: true
+    password: 676ccd3b-793d-4efd-b93c-48943711055d
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
+    port: 20018
+    cipher: auto
+    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: 223.113.54.131
+    port: 2004
+    cipher: auto
+    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id016
+    name: 🇨🇳_CN_中国->🇸🇰_SK_斯洛伐克
+    type: vmess
+    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
+    port: 20026
+    cipher: auto
+    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id017
+    name: 🇨🇳_CN_中国->🇧🇾_BY_白俄罗斯
+    type: vmess
+    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
+    port: 20019
+    cipher: auto
+    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id018
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: server21.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 11cd2b93-a102-49a2-97be-27c33c743618
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server21.beheshtbaneh.com
+  - &id019
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+    type: vmess
+    server: 223.113.54.131
+    port: 2000
+    cipher: auto
+    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id020
+    name: 🇨🇳_CN_中国->🇧🇦_BA_波黑
+    type: vmess
+    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
+    port: 20014
+    cipher: auto
+    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id021
     name: 🇩🇪_DE_德国_2
     type: trojan
-    server: 18.156.123.121
+    server: 35.156.129.20
     port: 22222
     udp: true
     password: telegram-id-privatevpns
     sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id031
-    name: 🇬🇧_GB_英国
+  - &id022
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
+    port: 20021
+    cipher: auto
+    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id023
+    name: 🇩🇪_DE_德国_3
     type: trojan
-    server: 198.244.190.189
+    server: 5.104.108.109
     port: 443
     udp: true
-    password: 81dfb458-9a26-486a-a0da-914c380459c6
+    password: 676ccd3b-793d-4efd-b93c-48943711055d
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇨🇳_CN_中国->🇮🇶_IQ_伊拉克
+    type: vmess
+    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
+    port: 20011
+    cipher: auto
+    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id025
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 35.87.209.22
+    port: 13489
+    cipher: auto
+    uuid: 61761e55-dff5-4f94-f75f-b0a4718bba98
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id026
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: vmess
+    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
+    port: 20005
+    cipher: auto
+    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id027
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: 183.232.170.22
+    port: 30128
+    cipher: auto
+    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id028
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: server10.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 66d4af1c-fcc3-479b-847c-3260253e1faa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server10.beheshtbaneh.com
+  - &id029
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 94.131.10.135
+    port: 2086
+    cipher: auto
+    uuid: e2021c91-6e29-49d6-9641-14a8f2600e05
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id030
+    name: 🇺🇸_US_美国->🇷🇴_RO_罗马尼亚
+    type: vmess
+    server: 104.17.25.1
+    port: 80
+    cipher: auto
+    uuid: 4e23bd4f-cc11-4ade-fbc1-fcaf245662bf
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: lmnyvpn.catnipballs.gay
+  - &id031
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
+  - &id032
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: server5.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 352ecc6f-21f1-4dc8-8177-4ebd52c55b12
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server5.beheshtbaneh.com
+  - &id033
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: server3.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: e305fc57-6153-4650-8c52-9a36865a199d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server3.beheshtbaneh.com
+  - &id034
+    name: 🇩🇪_DE_德国_4
+    type: trojan
+    server: 3.70.41.199
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
 proxy-groups:
@@ -441,6 +522,9 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -477,6 +561,9 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
   - name: SELECT
     type: select
     proxies:
@@ -511,6 +598,9 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
