--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,20 +8,35 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2052
+    server: 104.20.231.30
+    port: 80
     cipher: auto
-    uuid: 58ecb66f-8b55-4b2a-97c9-7b87e189d2f7
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /video/QXjZG5u4F2
+      path: /
       headers:
-        host: us3AJ8biuQx.fzbqfrse.xyz
+        host: my1.tooters.ir
   - &id002
     name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.22.51.162
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id003
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: 104.21.82.183
     port: 8880
@@ -35,18 +50,181 @@ proxies:
       path: /
       headers:
         host: server6.beheshtbaneh.com
-  - &id003
-    name: 🇨🇦_CA_加拿大
+  - &id004
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 108.181.5.18
-    port: 18657
+    server: 104.21.94.99
+    port: 8080
     cipher: auto
-    uuid: 636ba072-493e-4235-b7a8-822bd4e340d5
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.blueberrywindow.online
+  - &id005
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 104.24.208.37
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id006
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 104.19.87.19
+    port: 2052
+    cipher: auto
+    uuid: e393dd86-fddc-4bce-8abe-d902cf831670
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/DDC4btA8wc/
+      headers:
+        host: us2jdgv5GC7.fzbqfrse.xyz
+  - &id007
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 35.91.34.93
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id008
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
+    cipher: auto
+    uuid: e393dd86-fddc-4bce-8abe-d902cf831670
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/DDC4btA8wc/
+      headers:
+        host: us2jdgv5GC7.fzbqfrse.xyz
+  - &id009
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: server3.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: e305fc57-6153-4650-8c52-9a36865a199d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server3.beheshtbaneh.com
+  - &id010
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 45.32.192.94
+    port: 12079
+    cipher: auto
+    uuid: e63f477b-59d7-485e-9385-c38888b60cbf
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10845
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10846
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10848
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10838
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10850
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10837
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10847
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: 183.232.170.22
+    port: 30128
+    cipher: auto
+    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id004
+  - &id019
     name: 🇪🇸_ES_西班牙->🇭🇰_HK_香港
     type: vmess
     server: 185.214.103.249
@@ -61,13 +239,13 @@ proxies:
       path: /db00
       headers:
         host: cache-hk-1.cn-db.top
-  - &id005
-    name: 🇺🇸_US_美国_3
+  - &id020
+    name: 🇺🇸_US_美国_11
     type: vmess
-    server: server12.beheshtbaneh.com
+    server: server4.beheshtbaneh.com
     port: 8880
     cipher: auto
-    uuid: 39c03e6d-9efd-4e5a-8851-cd4ed0ec303c
+    uuid: b7e04f2a-2a6a-4b74-a11e-06f658c36391
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -75,70 +253,26 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: server12.beheshtbaneh.com
-  - &id006
-    name: 🇫🇷_FR_法国
-    type: ss
-    server: 51.158.204.157
-    port: 1165
-    password: 1NuiNBTUl7mwxFwtpDxL-g
-    cipher: chacha20-ietf-poly1305
-  - &id007
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 74.119.194.192
-    port: 41743
-    password: KBnPIuBNoue5acFpQ28LHg
-    cipher: chacha20-ietf-poly1305
-  - &id008
-    name: 🇺🇸_US_美国_5
+        host: server4.beheshtbaneh.com
+  - &id021
+    name: 🇺🇸_US_美国_12
     type: vmess
-    server: server2.beheshtbaneh.com
-    port: 8880
+    server: 104.17.19.122
+    port: 2052
     cipher: auto
-    uuid: 8420ee38-4cf6-4d79-a9ec-2731207cf83a
+    uuid: e393dd86-fddc-4bce-8abe-d902cf831670
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /video/DDC4btA8wc/
       headers:
-        host: server2.beheshtbaneh.com
-  - &id009
-    name: 🇬🇮_GI_直布罗陀
+        host: us2jdgv5GC7.fzbqfrse.xyz
+  - &id022
+    name: 🇺🇸_US_美国_13
     type: vmess
-    server: ee2-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: c1ebe8c7-bdd9-4aca-a2f7-01bea79279b3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: ee2-vmess.sshmax.xyz
-  - &id010
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.22.51.162
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id011
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 104.21.94.99
+    server: www.blueberrywindow.online
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -150,252 +284,22 @@ proxies:
       path: /
       headers:
         host: www.blueberrywindow.online
-  - &id012
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 104.18.99.110
-    port: 2095
-    cipher: auto
-    uuid: bdede9d3-68c4-4bb1-8ad1-9a8eb07ff76f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/qYZue4zaWS
-      headers:
-        host: us82pRzxDMb.fzbqfrse.xyz
-  - &id013
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 5.104.108.120
-    port: 443
-    udp: true
-    password: 676ccd3b-793d-4efd-b93c-48943711055d
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
-    port: 20018
-    cipher: auto
-    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
-  - &id015
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 223.113.54.131
-    port: 2004
-    cipher: auto
-    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
-  - &id016
-    name: 🇨🇳_CN_中国->🇸🇰_SK_斯洛伐克
-    type: vmess
-    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
-    port: 20026
-    cipher: auto
-    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
-  - &id017
-    name: 🇨🇳_CN_中国->🇧🇾_BY_白俄罗斯
-    type: vmess
-    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
-    port: 20019
-    cipher: auto
-    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
-  - &id018
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: server21.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 11cd2b93-a102-49a2-97be-27c33c743618
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server21.beheshtbaneh.com
-  - &id019
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 223.113.54.131
-    port: 2000
-    cipher: auto
-    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
-  - &id020
-    name: 🇨🇳_CN_中国->🇧🇦_BA_波黑
-    type: vmess
-    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
-    port: 20014
-    cipher: auto
-    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
-  - &id021
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 35.156.129.20
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
-    port: 20021
-    cipher: auto
-    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
   - &id023
-    name: 🇩🇪_DE_德国_3
-    type: trojan
-    server: 5.104.108.109
-    port: 443
-    udp: true
-    password: 676ccd3b-793d-4efd-b93c-48943711055d
-    sni: 20-24-33-134.nhost.00cdn.com
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 172.67.212.114
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.biz
   - &id024
-    name: 🇨🇳_CN_中国->🇮🇶_IQ_伊拉克
-    type: vmess
-    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
-    port: 20011
-    cipher: auto
-    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
-  - &id025
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 35.87.209.22
-    port: 13489
-    cipher: auto
-    uuid: 61761e55-dff5-4f94-f75f-b0a4718bba98
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id026
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: vmess
-    server: b17f1be8-b6fa-42b3-de2c-ece5ebbe6fd8.ritalin.dev
-    port: 20005
-    cipher: auto
-    uuid: f919e531-2a05-4b7a-9b40-3efdc71041ca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
-  - &id027
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 183.232.170.22
-    port: 30128
-    cipher: auto
-    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: server10.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 66d4af1c-fcc3-479b-847c-3260253e1faa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server10.beheshtbaneh.com
-  - &id029
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 94.131.10.135
-    port: 2086
-    cipher: auto
-    uuid: e2021c91-6e29-49d6-9641-14a8f2600e05
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id030
     name: 🇺🇸_US_美国->🇷🇴_RO_罗马尼亚
     type: vmess
     server: 104.17.25.1
@@ -410,43 +314,13 @@ proxies:
       path: /
       headers:
         host: lmnyvpn.catnipballs.gay
-  - &id031
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id032
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: server5.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 352ecc6f-21f1-4dc8-8177-4ebd52c55b12
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server5.beheshtbaneh.com
-  - &id033
+  - &id025
     name: 🇺🇸_US_美国_15
     type: vmess
-    server: server3.beheshtbaneh.com
-    port: 8880
+    server: 172.67.166.190
+    port: 8080
     cipher: auto
-    uuid: e305fc57-6153-4650-8c52-9a36865a199d
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -454,16 +328,31 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: server3.beheshtbaneh.com
-  - &id034
-    name: 🇩🇪_DE_德国_4
+        host: www.crispyrainbow.online
+  - &id026
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: server32.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 044ba8ed-7285-472a-bc14-fb91dc6be4c9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server32.beheshtbaneh.com
+  - &id027
+    name: 🇬🇧_GB_英国
     type: trojan
-    server: 3.70.41.199
+    server: 18.134.176.184
     port: 22222
     udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: false
     network: tcp
 proxy-groups:
   - name: PROXY
@@ -518,13 +407,6 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -557,13 +439,6 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
   - name: SELECT
     type: select
     proxies:
@@ -594,13 +469,6 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
